--- a/Desktop/JaarProjek/ReelIn/app/src/main/res/values/colors.xml
+++ b/Desktop/JaarProjek/ReelIn/app/src/main/res/values/colors.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#DE7A22</color>
+    <color name="colorPrimaryDark">#b7641b</color>
+    <color name="darkWhite">#e0e0e0</color>
+    <color name="sea">#20948B</color>
+    <color name="darkGrey">#636363</color>
+    <color name="lightGrey">#8c8c8c</color>
 </resources>
