--- a/Desktop/JaarProjek/ReelIn/app/src/main/res/values/styles.xml
+++ b/Desktop/JaarProjek/ReelIn/app/src/main/res/values/styles.xml
@@ -5,7 +5,12 @@
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorAccent">@color/sea</item>
+    </style>
+    <style name="Divider">
+        <item name="android:layout_width">300dp</item>
+        <item name="android:layout_height">1dp</item>
+        <item name="android:background">?android:attr/listDivider</item>
     </style>
 
 </resources>
